例外処理のテストを追加 空のリストを返すケースのテストを追加