@@ -1,5 +1,6 @@
 package com.github.oosm032519.playlistviewernext.service;
 
+import org.apache.hc.core5.http.ParseException;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -10,8 +11,8 @@ import org.springframework.security.oauth2.client.OAuth2AuthorizedClientService;
 import org.springframework.security.oauth2.client.authentication.OAuth2AuthenticationToken;
 import org.springframework.security.oauth2.core.OAuth2AccessToken;
 import se.michaelthelin.spotify.SpotifyApi;
+import se.michaelthelin.spotify.exceptions.SpotifyWebApiException;
 import se.michaelthelin.spotify.model_objects.credentials.ClientCredentials;
-import se.michaelthelin.spotify.model_objects.miscellaneous.PlaylistTracksInformation;
 import se.michaelthelin.spotify.model_objects.specification.*;
 import se.michaelthelin.spotify.requests.authorization.client_credentials.ClientCredentialsRequest;
 import se.michaelthelin.spotify.requests.data.artists.GetArtistRequest;
@@ -20,9 +21,13 @@ import se.michaelthelin.spotify.requests.data.playlists.GetPlaylistRequest;
 import se.michaelthelin.spotify.requests.data.search.simplified.SearchPlaylistsRequest;
 import se.michaelthelin.spotify.requests.data.tracks.GetAudioFeaturesForTrackRequest;
 
+import java.io.IOException;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
@@ -42,7 +47,7 @@ class SpotifyServiceTest {
     }
 
     @Test
-    void testGetClientCredentialsToken() throws Exception {
+    void testGetClientCredentialsToken() throws IOException, SpotifyWebApiException, ParseException {
         // Arrange
         ClientCredentialsRequest.Builder builder = mock(ClientCredentialsRequest.Builder.class);
         ClientCredentialsRequest clientCredentialsRequest = mock(ClientCredentialsRequest.class);
@@ -60,7 +65,22 @@ class SpotifyServiceTest {
     }
 
     @Test
-    void testSearchPlaylists() throws Exception {
+    void testGetClientCredentialsTokenThrowsException() throws IOException, SpotifyWebApiException, ParseException {
+        // Arrange
+        ClientCredentialsRequest.Builder builder = mock(ClientCredentialsRequest.Builder.class);
+        ClientCredentialsRequest clientCredentialsRequest = mock(ClientCredentialsRequest.class);
+        when(spotifyApi.clientCredentials()).thenReturn(builder);
+        when(builder.build()).thenReturn(clientCredentialsRequest);
+        when(clientCredentialsRequest.execute()).thenThrow(new IOException("API error"));
+
+        // Act & Assert
+        assertThatThrownBy(() -> spotifyService.getClientCredentialsToken())
+                .isInstanceOf(IOException.class)
+                .hasMessage("API error");
+    }
+
+    @Test
+    void testSearchPlaylists() throws IOException, SpotifyWebApiException, ParseException {
         // Arrange
         String query = "test query";
         SearchPlaylistsRequest.Builder builder = mock(SearchPlaylistsRequest.Builder.class);
@@ -79,11 +99,32 @@ class SpotifyServiceTest {
 
         // Assert
         assertThat(result).hasSize(1);
-        assertThat(result.get(0)).isEqualTo(playlistSimplifieds[0]);
+        assertThat(result.getFirst()).isEqualTo(playlistSimplifieds[0]);
     }
 
     @Test
-    void testGetPlaylistTracks() throws Exception {
+    void testSearchPlaylistsReturnsEmptyList() throws IOException, SpotifyWebApiException, ParseException {
+        // Arrange
+        String query = "empty query";
+        SearchPlaylistsRequest.Builder builder = mock(SearchPlaylistsRequest.Builder.class);
+        SearchPlaylistsRequest searchPlaylistsRequest = mock(SearchPlaylistsRequest.class);
+        Paging<PlaylistSimplified> playlistSimplifiedPaging = mock(Paging.class);
+
+        when(spotifyApi.searchPlaylists(query)).thenReturn(builder);
+        when(builder.limit(20)).thenReturn(builder);
+        when(builder.build()).thenReturn(searchPlaylistsRequest);
+        when(searchPlaylistsRequest.execute()).thenReturn(playlistSimplifiedPaging);
+        when(playlistSimplifiedPaging.getItems()).thenReturn(null);
+
+        // Act
+        List<PlaylistSimplified> result = spotifyService.searchPlaylists(query);
+
+        // Assert
+        assertThat(result).isEmpty();
+    }
+
+    @Test
+    void testGetPlaylistTracks() throws IOException, SpotifyWebApiException, ParseException {
         // Arrange
         String playlistId = "test-playlist-id";
         GetPlaylistRequest.Builder builder = mock(GetPlaylistRequest.Builder.class);
@@ -107,21 +148,106 @@ class SpotifyServiceTest {
     }
 
     @Test
-    void testGetCurrentUsersPlaylists() throws Exception {
+    void testGetArtistGenres() throws IOException, SpotifyWebApiException, ParseException {
+        // Arrange
+        String artistId = "test-artist-id";
+        GetArtistRequest.Builder builder = mock(GetArtistRequest.Builder.class);
+        GetArtistRequest getArtistRequest = mock(GetArtistRequest.class);
+        Artist artist = mock(Artist.class);
+        String[] genres = new String[]{"pop", "rock"};
+
+        when(spotifyApi.getArtist(artistId)).thenReturn(builder);
+        when(builder.build()).thenReturn(getArtistRequest);
+        when(getArtistRequest.execute()).thenReturn(artist);
+        when(artist.getGenres()).thenReturn(genres);
+        when(artist.getName()).thenReturn("Test Artist");
+
+        // Act
+        List<String> result = spotifyService.getArtistGenres(artistId);
+
+        // Assert
+        assertThat(result).containsExactly("pop", "rock");
+    }
+
+    @Test
+    void testGetAudioFeaturesForTrack() throws IOException, SpotifyWebApiException, ParseException {
+        // Arrange
+        String trackId = "test-track-id";
+        GetAudioFeaturesForTrackRequest.Builder builder = mock(GetAudioFeaturesForTrackRequest.Builder.class);
+        GetAudioFeaturesForTrackRequest getAudioFeaturesRequest = mock(GetAudioFeaturesForTrackRequest.class);
+        AudioFeatures audioFeatures = mock(AudioFeatures.class);
+
+        when(spotifyApi.getAudioFeaturesForTrack(trackId)).thenReturn(builder);
+        when(builder.build()).thenReturn(getAudioFeaturesRequest);
+        when(getAudioFeaturesRequest.execute()).thenReturn(audioFeatures);
+
+        // Act
+        AudioFeatures result = spotifyService.getAudioFeaturesForTrack(trackId);
+
+        // Assert
+        assertThat(result).isEqualTo(audioFeatures);
+    }
+
+    @Test
+    void testGetPlaylistName() throws IOException, SpotifyWebApiException, ParseException {
+        // Arrange
+        String playlistId = "test-playlist-id";
+        GetPlaylistRequest.Builder builder = mock(GetPlaylistRequest.Builder.class);
+        GetPlaylistRequest getPlaylistRequest = mock(GetPlaylistRequest.class);
+        Playlist playlist = mock(Playlist.class);
+
+        when(spotifyApi.getPlaylist(playlistId)).thenReturn(builder);
+        when(builder.build()).thenReturn(getPlaylistRequest);
+        when(getPlaylistRequest.execute()).thenReturn(playlist);
+        when(playlist.getName()).thenReturn("Test Playlist");
+
+        // Act
+        String result = spotifyService.getPlaylistName(playlistId);
+
+        // Assert
+        assertThat(result).isEqualTo("Test Playlist");
+    }
+
+    @Test
+    void testGetPlaylistOwner() throws IOException, SpotifyWebApiException, ParseException {
+        // Arrange
+        String playlistId = "test-playlist-id";
+        GetPlaylistRequest.Builder builder = mock(GetPlaylistRequest.Builder.class);
+        GetPlaylistRequest getPlaylistRequest = mock(GetPlaylistRequest.class);
+        Playlist playlist = mock(Playlist.class);
+        User owner = mock(User.class);
+
+        when(spotifyApi.getPlaylist(playlistId)).thenReturn(builder);
+        when(builder.build()).thenReturn(getPlaylistRequest);
+        when(getPlaylistRequest.execute()).thenReturn(playlist);
+        when(playlist.getOwner()).thenReturn(owner);
+        when(owner.getId()).thenReturn("owner-id");
+        when(owner.getDisplayName()).thenReturn("Owner Name");
+
+        // Act
+        User result = spotifyService.getPlaylistOwner(playlistId);
+
+        // Assert
+        assertThat(result).isEqualTo(owner);
+        assertThat(result.getId()).isEqualTo("owner-id");
+        assertThat(result.getDisplayName()).isEqualTo("Owner Name");
+    }
+
+    @Test
+    void testGetCurrentUsersPlaylists() throws IOException, SpotifyWebApiException, ParseException {
         // Arrange
         OAuth2AuthenticationToken authentication = mock(OAuth2AuthenticationToken.class);
+        OAuth2AuthorizedClient authorizedClient = mock(OAuth2AuthorizedClient.class);
+        OAuth2AccessToken accessToken = mock(OAuth2AccessToken.class);
         GetListOfCurrentUsersPlaylistsRequest.Builder builder = mock(GetListOfCurrentUsersPlaylistsRequest.Builder.class);
         GetListOfCurrentUsersPlaylistsRequest playlistsRequest = mock(GetListOfCurrentUsersPlaylistsRequest.class);
         Paging<PlaylistSimplified> playlistsPaging = mock(Paging.class);
         PlaylistSimplified[] playlistSimplifieds = new PlaylistSimplified[]{mock(PlaylistSimplified.class)};
 
         when(authentication.getName()).thenReturn("test-user");
-        when(authorizedClientService.loadAuthorizedClient(eq("spotify"), eq("test-user")))
-                .thenReturn(mock(OAuth2AuthorizedClient.class));
-        when(authorizedClientService.loadAuthorizedClient("spotify", "test-user").getAccessToken())
-                .thenReturn(mock(OAuth2AccessToken.class));
-        when(authorizedClientService.loadAuthorizedClient("spotify", "test-user").getAccessToken().getTokenValue())
-                .thenReturn("test-access-token");
+        when(authorizedClientService.loadAuthorizedClient("spotify", "test-user")).thenReturn(authorizedClient);
+        when(authorizedClient.getAccessToken()).thenReturn(accessToken);
+        when(accessToken.getTokenValue()).thenReturn("test-access-token");
 
         when(spotifyApi.getListOfCurrentUsersPlaylists()).thenReturn(builder);
         when(builder.build()).thenReturn(playlistsRequest);
@@ -134,6 +260,34 @@ class SpotifyServiceTest {
         // Assert
         verify(spotifyApi).setAccessToken("test-access-token");
         assertThat(result).hasSize(1);
-        assertThat(result.get(0)).isEqualTo(playlistSimplifieds[0]);
+        assertThat(result.getFirst()).isEqualTo(playlistSimplifieds[0]);
+    }
+
+    @Test
+    void testGetCurrentUsersPlaylistsReturnsEmptyList() throws IOException, SpotifyWebApiException, ParseException {
+        // Arrange
+        OAuth2AuthenticationToken authentication = mock(OAuth2AuthenticationToken.class);
+        OAuth2AuthorizedClient authorizedClient = mock(OAuth2AuthorizedClient.class);
+        OAuth2AccessToken accessToken = mock(OAuth2AccessToken.class);
+        GetListOfCurrentUsersPlaylistsRequest.Builder builder = mock(GetListOfCurrentUsersPlaylistsRequest.Builder.class);
+        GetListOfCurrentUsersPlaylistsRequest playlistsRequest = mock(GetListOfCurrentUsersPlaylistsRequest.class);
+        Paging<PlaylistSimplified> playlistsPaging = mock(Paging.class);
+
+        when(authentication.getName()).thenReturn("test-user");
+        when(authorizedClientService.loadAuthorizedClient("spotify", "test-user")).thenReturn(authorizedClient);
+        when(authorizedClient.getAccessToken()).thenReturn(accessToken);
+        when(accessToken.getTokenValue()).thenReturn("test-access-token");
+
+        when(spotifyApi.getListOfCurrentUsersPlaylists()).thenReturn(builder);
+        when(builder.build()).thenReturn(playlistsRequest);
+        when(playlistsRequest.execute()).thenReturn(playlistsPaging);
+        when(playlistsPaging.getItems()).thenReturn(null);
+
+        // Act
+        List<PlaylistSimplified> result = spotifyService.getCurrentUsersPlaylists(authentication);
+
+        // Assert
+        verify(spotifyApi).setAccessToken("test-access-token");
+        assertThat(result).isEmpty();
     }
 }
